--- a/master-unity/Packages/manifest.json
+++ b/master-unity/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.probuilder": "5.1.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
